Removed mandatory blocking call if apConfig.defaultUrl wasn't defined.

--- a/docs/partials/api/dataService.getFieldVersionHistory.html
+++ b/docs/partials/api/dataService.getFieldVersionHistory.html
@@ -12,7 +12,7 @@
 <pre class="prettyprint linenums">
 var payload = {
        operation: 'GetVersionCollection',
-       webURL: configService.defaultUrl,
+       webURL: apConfig.defaultUrl,
        strlistID: model.list.guid,
        strlistItemID: listItem.id,
        strFieldName: fieldDefinition.internalName
