--- a/partials/api/apCacheService.EntityCache.getEntity.html
+++ b/partials/api/apCacheService.EntityCache.getEntity.html
@@ -1,10 +1,10 @@
 <h1><code ng:non-bindable="">getEntity</code>
-<div><span class="hint">service in module <code ng:non-bindable="">apCacheService.EntityCache</code>
+<div><span class="hint">function in module <code ng:non-bindable="">apCacheService</code>
 </span>
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="apcacheservice-entitycache-getentity-page"><p>Promise which returns the requested entity once it has been registered in the cache.</p>
+<div class="description"><div class="apcacheservice-entitycache-page apcacheservice-entitycache-getentity-page"><p>Promise which returns the requested entity once it has been registered in the cache.</p>
 </div></div>
 <h2 id="usage">Usage</h2>
 <div class="usage"><pre class="prettyprint linenums">getEntity();</pre>
