--- a/partials/api/utilityService.stringifySharePointDate.html
+++ b/partials/api/utilityService.stringifySharePointDate.html
@@ -4,12 +4,14 @@
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="utilityservice-stringifysharepointdate-page"><p>Converts a JavaScript date into a modified ISO8601 date string using the TimeZone offset for the current user.
-e.g., &#39;2014-05-08T08:12:18Z-07:00&#39;</p>
+<div class="description"><div class="utilityservice-stringifysharepointdate-page"><p>Converts a JavaScript date into a modified ISO8601 date string using the TimeZone offset for the current user.</p>
 </div></div>
 <h2 id="usage">Usage</h2>
 <div class="usage"><pre class="prettyprint linenums">stringifySharePointDate(date);</pre>
 <h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>date</td><td><a href="" class="label type-hint type-hint-date">Date</a></td><td><div class="utilityservice-stringifysharepointdate-page"><p>Valid JS date.</p>
 </div></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="utilityservice-stringifysharepointdate-page"><p>ISO8601 date string.</p>
 </div></td></tr></table></div>
+<h2 id="example">Example</h2>
+<div class="example"><div class="utilityservice-stringifysharepointdate-page"><pre class="prettyprint linenums">'2014-05-08T08:12:18Z-07:00'</pre>
+</div></div>
 </div>
