--- a/partials/api/Lookup.getProperty.html
+++ b/partials/api/Lookup.getProperty.html
@@ -8,9 +8,23 @@
 </div></div>
 <h2 id="usage">Usage</h2>
 <div class="usage"><pre class="prettyprint linenums">getProperty(propertyPath);</pre>
-<h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>propertyPath</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="lookup-getproperty-page"><ul>
-<li>The dot separated propertyPath.</li>
-</ul>
+<h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>propertyPath</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="lookup-getproperty-page"><p>The dot separated propertyPath.</p>
 </div></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-promise">promise</a></td><td><div class="lookup-getproperty-page"><p>Resolves with the value, or undefined if it doesn&#39;t exists.</p>
 </div></td></tr></table></div>
+<h2 id="example">Example</h2>
+<div class="example"><div class="lookup-getproperty-page"><pre class="prettyprint linenums">var project = {
+   title: 'Project 1',
+   location: {
+       lookupId: 5,
+       lookupValue: 'Some Building'
+   }
+
+   //To get the location.city
+   project.location.getProperty('city')
+       .then(function(city) {
+          //Resolves with the city property from the referenced location entity
+
+       });
+</pre>
+</div></div>
 </div>
