--- a/partials/api/ListItem.getFieldDefinition.html
+++ b/partials/api/ListItem.getFieldDefinition.html
@@ -11,4 +11,18 @@
 <h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>fieldName</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="listitem-getfielddefinition-page"><p>Internal field name.</p>
 </div></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="listitem-getfielddefinition-page"><p>Field definition.</p>
 </div></td></tr></table></div>
+<h2 id="example">Example</h2>
+<div class="example"><div class="listitem-getfielddefinition-page"><pre class="prettyprint linenums">
+var project = {
+   title: 'Project 1',
+   location: {
+       lookupId: 5,
+       lookupValue: 'Some Building'
+   }
+};
+
+//To get field metadata
+var locationDefinition = project.getFieldDefinition('location');
+</pre>
+</div></div>
 </div>
