--- a/partials/api/Model.getFieldDefinition.html
+++ b/partials/api/Model.getFieldDefinition.html
@@ -4,7 +4,19 @@
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="model-getfielddefinition-page"><p>Returns the field definition from the definitions defined in the custom fields array within a model.</p>
+<div class="description"><div class="model-getfielddefinition-page"><p>Returns the field definition from the definitions defined in the custom fields array within a model.
+<pre class="prettyprint linenums">
+var project = {
+   title: 'Project 1',
+   location: {
+       lookupId: 5,
+       lookupValue: 'Some Building'
+   }
+};
+
+//To get field metadata
+var locationDefinition = projectsModel.getFieldDefinition('location');
+</pre>
 </div></div>
 <h2 id="usage">Usage</h2>
 <div class="usage"><pre class="prettyprint linenums">getFieldDefinition(fieldName);</pre>
