--- a/partials/api/Model.registerQuery.html
+++ b/partials/api/Model.registerQuery.html
@@ -4,14 +4,21 @@
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="model-registerquery-page"><p>Constructor that allows us create a static query with a reference to the parent model</p>
+<div class="description"><div class="model-registerquery-page"><p>Constructor that allows us create a static query with the option to build dynamic queries as seen in the
+third example.  This construct is a passthrough to SPServices</p>
 </div></div>
 <h2 id="usage">Usage</h2>
 <div class="usage"><pre class="prettyprint linenums">registerQuery([queryOptions]);</pre>
 <h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>[queryOptions]</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-registerquery-page"><p>Optional options to pass through to the dataService.</p>
 </div></td></tr><tr><td>queryOptions.name</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-registerquery-page"><p>Optional name of the new query (recommended but will
 default to &#39;Primary&#39; if not specified)</p>
-</div> <p><em>(default: defaultQueryName)</em></p></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-registerquery-page"><p>Query Returns a new query object.</p>
+</div> <p><em>(default: defaultQueryName)</em></p></td></tr><tr><td>queryOptions.operation</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-registerquery-page"><p>Defaults to &quot;GetListItemChangesSinceToken&quot;
+but for a smaller payload and faster response you can use &quot;GetListItems&quot;.</p>
+</div> <p><em>(default: "GetListItemChangesSinceToken")</em></p></td></tr><tr><td>queryOptions.cacheXML</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="model-registerquery-page"><p>Typically don&#39;t need to store the XML response because it
+has already been parsed into JS objects.</p>
+</div> <p><em>(default: false)</em></p></td></tr><tr><td>[queryOptions.query]</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-registerquery-page"><p>CAML Query - Josh McCarty has a good quick reference
+&lt;a href=&quot;<a href="http://joshmccarty.com/2012/06/a-caml-query-quick-reference/&gt;here">http://joshmccarty.com/2012/06/a-caml-query-quick-reference/&gt;here</a></a></p>
+</div></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-registerquery-page"><p>Query Returns a new query object.</p>
 </div></td></tr></table></div>
 <h2 id="example">Example</h2>
 <div class="example"><div class="model-registerquery-page"><p><h6 id="example_example-#1">Example #1</h6>
