--- a/partials/api/Model.registerQuery.html
+++ b/partials/api/Model.registerQuery.html
@@ -16,8 +16,8 @@ default to &#39;Primary&#39; if not specified)</p>
 but for a smaller payload and faster response you can use &quot;GetListItems&quot;.</p>
 </div> <p><em>(default: "GetListItemChangesSinceToken")</em></p></td></tr><tr><td>queryOptions.cacheXML</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="model-registerquery-page"><p>Typically don&#39;t need to store the XML response because it
 has already been parsed into JS objects.</p>
-</div> <p><em>(default: false)</em></p></td></tr><tr><td>[queryOptions.query]</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-registerquery-page"><p>CAML Query - Josh McCarty has a good quick reference
-&lt;a href=&quot;<a href="http://joshmccarty.com/2012/06/a-caml-query-quick-reference/&gt;here">http://joshmccarty.com/2012/06/a-caml-query-quick-reference/&gt;here</a></a></p>
+</div> <p><em>(default: false)</em></p></td></tr><tr><td>[queryOptions.query]</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-registerquery-page"><p>CAML Query - Josh McCarty has a good quick reference (link below)
+<a href="http://joshmccarty.com/2012/06/a-caml-query-quick-reference">here</a></p>
 </div></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-registerquery-page"><p>Query Returns a new query object.</p>
 </div></td></tr></table></div>
 <h2 id="example">Example</h2>
