--- a/partials/api/Model.registerQuery.html
+++ b/partials/api/Model.registerQuery.html
@@ -19,7 +19,7 @@ has already been parsed into JS objects.</p>
 </div> <p><em>(default: false)</em></p></td></tr><tr><td>[queryOptions.query]</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-registerquery-page"><p>CAML Query - Josh McCarty has a good quick reference
 <a href="http://joshmccarty.com/2012/06/a-caml-query-quick-reference">here</a></p>
 </div></td></tr><tr><td>[queryOptions.queryOptions]</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-registerquery-page"><pre class="prettyprint linenums">
-//Defaults
+//Default
 queryOptions: '' +
 '&lt;QueryOptions&gt;' +
 '   &lt;IncludeMandatoryColumns&gt;FALSE&lt;/IncludeMandatoryColumns&gt;' +
@@ -51,62 +51,63 @@ model.registerQuery({
        '&lt;/Query&gt;'
 });
 </pre>
-<p><h6 id="example_example-#2">Example #2</h6>
-<pre class="prettyprint linenums">
-//Could be placed on the projectModel and creates the query but doesn't call it
-projectModel.registerQuery({
-    name: 'primary',
-    query: '' +
-        '&lt;Query&gt;' +
-        '   &lt;OrderBy&gt;' +
-        '       &lt;FieldRef Name="Title" Ascending="TRUE"/&gt;' +
-        '   &lt;/OrderBy&gt;' +
-        '&lt;/Query&gt;'
-});
+<pre><code>     &lt;h4&gt;Example #2&lt;/h4&gt;
+    <pre class="prettyprint linenums">
+         //Could be placed on the projectModel and creates the query but doesn't call it
+         projectModel.registerQuery({
+             name: 'primary',
+             query: '' +
+                 '&lt;Query&gt;' +
+                 '   &lt;OrderBy&gt;' +
+                 '       &lt;FieldRef Name="Title" Ascending="TRUE"/&gt;' +
+                 '   &lt;/OrderBy&gt;' +
+                 '&lt;/Query&gt;'
+         });
 
-//To call the query or check for changes since the last call
-projectModel.executeQuery('primary').then(function(entities) {
-    //We now have a reference to array of entities stored in the local cache
-    //These inherit from the ListItem prototype as well as the Project prototype on the model
-    $scope.projects = entities;
-});
-</pre>
-<p><h6 id="example_example-#3">Example #3</h6>
-<pre class="prettyprint linenums">
-//Advanced functionality that would allow us to dynamically create queries for list items with a
-//lookup field associated with a specific project id.  Let's assume this is on the projectTasksModel.
-model.queryByProjectId(projectId) {
-    // Unique query name
-    var queryKey = 'pid' + projectId;
+         //To call the query or check for changes since the last call
+         projectModel.executeQuery('primary').then(function(entities) {
+             //We now have a reference to array of entities stored in the local cache
+             //These inherit from the ListItem prototype as well as the Project prototype on the model
+             $scope.projects = entities;
+         });
+         </pre>
 
-    // Register project query if it doesn't exist
-    if (!_.isObject(model.queries[queryKey])) {
-        model.registerQuery({
-            name: queryKey,
-            query: '' +
-                '&lt;Query&gt;' +
-                '   &lt;OrderBy&gt;' +
-                '       &lt;FieldRef Name="ID" Ascending="TRUE"/&gt;' +
-                '   &lt;/OrderBy&gt;' +
-                '   &lt;Where&gt;' +
-                '       &lt;And&gt;' +
-            // Prevents any records from being returned if user doesn't have permissions on project
-                '           &lt;IsNotNull&gt;' +
-                '               &lt;FieldRef Name="Project"/&gt;' +
-                '           &lt;/IsNotNull&gt;' +
-            // Return all records for the project matching param projectId
-                '           &lt;Eq&gt;' +
-                '               &lt;FieldRef Name="Project" LookupId="TRUE"/&gt;' +
-                '               &lt;Value Type="Lookup"&gt;' + projectId + '&lt;/Value&gt;' +
-                '           &lt;/Eq&gt;' +
-                '       &lt;/And&gt;' +
-                '   &lt;/Where&gt;' +
-                '&lt;/Query&gt;'
-        });
-    }
-    //Still using execute query but now we have a custom query
-    return model.executeQuery(queryKey);
-};
-</pre>
+     &lt;h4&gt;Example #3&lt;/h4&gt;
+     <pre class="prettyprint linenums">
+         //Advanced functionality that would allow us to dynamically create queries for list items with a
+         //lookup field associated with a specific project id.  Let's assume this is on the projectTasksModel.
+         model.queryByProjectId(projectId) {
+             // Unique query name
+             var queryKey = 'pid' + projectId;
+
+             // Register project query if it doesn't exist
+             if (!_.isObject(model.queries[queryKey])) {
+                 model.registerQuery({
+                     name: queryKey,
+                     query: '' +
+                         '&lt;Query&gt;' +
+                         '   &lt;OrderBy&gt;' +
+                         '       &lt;FieldRef Name="ID" Ascending="TRUE"/&gt;' +
+                         '   &lt;/OrderBy&gt;' +
+                         '   &lt;Where&gt;' +
+                         '       &lt;And&gt;' +
+                     // Prevents any records from being returned if user doesn't have permissions on project
+                         '           &lt;IsNotNull&gt;' +
+                         '               &lt;FieldRef Name="Project"/&gt;' +
+                         '           &lt;/IsNotNull&gt;' +
+                     // Return all records for the project matching param projectId
+                         '           &lt;Eq&gt;' +
+                         '               &lt;FieldRef Name="Project" LookupId="TRUE"/&gt;' +
+                         '               &lt;Value Type="Lookup"&gt;' + projectId + '&lt;/Value&gt;' +
+                         '           &lt;/Eq&gt;' +
+                         '       &lt;/And&gt;' +
+                         '   &lt;/Where&gt;' +
+                         '&lt;/Query&gt;'
+                 });
+             }
+             //Still using execute query but now we have a custom query
+             return model.executeQuery(queryKey);
+         };
+         </pre></code></pre>
 </div></div>
 </div>
