--- a/partials/api/Model.getLocalEntity.html
+++ b/partials/api/Model.getLocalEntity.html
@@ -4,8 +4,8 @@
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="model-getlocalentity-page"><p>Similar to Model.searchLocalCache but you don&#39;t need to specifiy a query, only searches by list item
-id, and returns a promise that is fullfilled once the requested list item is registered in the cache</p>
+<div class="description"><div class="model-getlocalentity-page"><p>Similar to Model.searchLocalCache but you don&#39;t need to specify a query, only searches by list item
+id, and returns a promise that is fulfilled once the requested list item is registered in the cache</p>
 </div></div>
 <h2 id="usage">Usage</h2>
 <div class="usage"><pre class="prettyprint linenums">getLocalEntity(entityId);</pre>
@@ -22,7 +22,7 @@ var task = {
    }
 };
 
-//Now we'd like to get the project referenced in the task
+// Now we'd like to get the project referenced in the task
 projectModel.getLocalEntity(task.project.lookupId).then(function(entity) {
     var projectThatICareAbout = entity;
     //Do something with it
