--- a/partials/api/Query.html
+++ b/partials/api/Query.html
@@ -19,10 +19,18 @@ the data SharePoint returns.</p>
 //Default
 queryOptions: '' +
 '&lt;QueryOptions&gt;' +
-'   &lt;IncludeMandatoryColumns&gt;FALSE&lt;/IncludeMandatoryColumns&gt;' +
-'   &lt;IncludeAttachmentUrls&gt;TRUE&lt;/IncludeAttachmentUrls&gt;' +
-'   &lt;IncludeAttachmentVersion&gt;FALSE&lt;/IncludeAttachmentVersion&gt;' +
-'   &lt;ExpandUserField&gt;FALSE&lt;/ExpandUserField&gt;' +
+'   &lt;IncludeMandatoryColumns&gt;' +
+     'FALSE' +
+    '&lt;/IncludeMandatoryColumns&gt;' +
+'   &lt;IncludeAttachmentUrls&gt;' +
+     'TRUE' +
+    '&lt;/IncludeAttachmentUrls&gt;' +
+'   &lt;IncludeAttachmentVersion&gt;' +
+     'FALSE' +
+    '&lt;/IncludeAttachmentVersion&gt;' +
+'   &lt;ExpandUserField&gt;' +
+     'FALSE' +
+    '&lt;/ExpandUserField&gt;' +
 '&lt;/QueryOptions&gt;',
 </pre>
 </div></td></tr><tr><td>model</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="query-page"><p>Reference to the parent model for the query.  Allows us to reference when out of
