--- a/partials/api/Model.registerQuery.html
+++ b/partials/api/Model.registerQuery.html
@@ -19,13 +19,20 @@ has already been parsed into JS objects.</p>
 </div> <p><em>(default: false)</em></p></td></tr><tr><td>[queryOptions.query]</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-registerquery-page"><p>CAML Query - Josh McCarty has a good quick reference
 <a href="http://joshmccarty.com/2012/06/a-caml-query-quick-reference">here</a></p>
 </div></td></tr><tr><td>[queryOptions.queryOptions]</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-registerquery-page"><pre class="prettyprint linenums">
-//Default
-queryOptions: '' +
+// Default options
 '&lt;QueryOptions&gt;' +
-'   &lt;IncludeMandatoryColumns&gt;FALSE&lt;/IncludeMandatoryColumns&gt;' +
-'   &lt;IncludeAttachmentUrls&gt;TRUE&lt;/IncludeAttachmentUrls&gt;' +
-'   &lt;IncludeAttachmentVersion&gt;FALSE&lt;/IncludeAttachmentVersion&gt;' +
-'   &lt;ExpandUserField&gt;FALSE&lt;/ExpandUserField&gt;' +
+'   &lt;IncludeMandatoryColumns&gt;' +
+     'FALSE' +
+    '&lt;/IncludeMandatoryColumns&gt;' +
+'   &lt;IncludeAttachmentUrls&gt;' +
+     'TRUE' +
+    '&lt;/IncludeAttachmentUrls&gt;' +
+'   &lt;IncludeAttachmentVersion&gt;' +
+     'FALSE' +
+    '&lt;/IncludeAttachmentVersion&gt;' +
+'   &lt;ExpandUserField&gt;' +
+     'FALSE' +
+    '&lt;/ExpandUserField&gt;' +
 '&lt;/QueryOptions&gt;',
 </pre>
 </div></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-registerquery-page"><p>Query Returns a new query object.</p>
