--- a/partials/api/Model.registerQuery.html
+++ b/partials/api/Model.registerQuery.html
@@ -9,7 +9,8 @@ third example.  This construct is a passthrough to SPServices</p>
 </div></div>
 <h2 id="usage">Usage</h2>
 <div class="usage"><pre class="prettyprint linenums">registerQuery([queryOptions]);</pre>
-<h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>[queryOptions]</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-registerquery-page"><p>Optional options to pass through to the dataService.</p>
+<h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>[queryOptions]</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-registerquery-page"><p>Optional options to pass through to the
+<a href="#/api/dataService.executeQuery">dataService</a>.</p>
 </div></td></tr><tr><td>queryOptions.name</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-registerquery-page"><p>Optional name of the new query (recommended but will
 default to &#39;Primary&#39; if not specified)</p>
 </div> <p><em>(default: defaultQueryName)</em></p></td></tr><tr><td>queryOptions.operation</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-registerquery-page"><p>Defaults to &quot;GetListItemChangesSinceToken&quot;
