--- a/partials/api/Model.registerQuery.html
+++ b/partials/api/Model.registerQuery.html
@@ -13,8 +13,10 @@ third example.  This construct is a passthrough to SPServices</p>
 <a href="#/api/dataService.executeQuery">dataService</a>.</p>
 </div></td></tr><tr><td>queryOptions.name</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-registerquery-page"><p>Optional name of the new query (recommended but will
 default to &#39;Primary&#39; if not specified)</p>
-</div> <p><em>(default: defaultQueryName)</em></p></td></tr><tr><td>queryOptions.operation</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-registerquery-page"><p>Defaults to &quot;GetListItemChangesSinceToken&quot;
-but for a smaller payload and faster response you can use &quot;GetListItems&quot;.</p>
+</div> <p><em>(default: defaultQueryName)</em></p></td></tr><tr><td>queryOptions.operation</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-registerquery-page"><p>Defaults to
+<a href="http://msdn.microsoft.com/en-us/library/lists.lists.getlistitemchangessincetoken(v=office.12">GetListItemChangesSinceToken</a>.aspx)
+but for a smaller payload and faster response you can use
+<a href="http://spservices.codeplex.com/wikipage?title=GetListItems&amp;referringTitle=Lists">GetListItems</a>.</p>
 </div> <p><em>(default: "GetListItemChangesSinceToken")</em></p></td></tr><tr><td>queryOptions.cacheXML</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="model-registerquery-page"><p>Typically don&#39;t need to store the XML response because it
 has already been parsed into JS objects.</p>
 </div> <p><em>(default: false)</em></p></td></tr><tr><td>[queryOptions.query]</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-registerquery-page"><p>CAML Query - Josh McCarty has a good quick reference
