--- a/partials/api/Model.registerQuery.html
+++ b/partials/api/Model.registerQuery.html
@@ -5,7 +5,7 @@
 </h1>
 <div><h2 id="description">Description</h2>
 <div class="description"><div class="model-registerquery-page"><p>Constructor that allows us create a static query with the option to build dynamic queries as seen in the
-third example.  This construct is a passthrough to SPServices</p>
+third example.  This construct is a passthrough to <a href="http://spservices.codeplex.com/">SPServices</a></p>
 </div></div>
 <h2 id="usage">Usage</h2>
 <div class="usage"><pre class="prettyprint linenums">registerQuery([queryOptions]);</pre>
