--- a/docs/partials/api/Model.getQuery.html
+++ b/docs/partials/api/Model.getQuery.html
@@ -13,6 +13,12 @@
 </div></td></tr></table></div>
 <h2 id="example">Example</h2>
 <div class="example"><div class="model-getquery-page"><pre class="prettyprint linenums">
+var primaryQuery = projectModel.getQuery();
+</pre>
+<pre class="prettyprint linenums">
+var primaryQuery = projectModel.getQuery('primary');
+</pre>
+<pre class="prettyprint linenums">
 var namedQuery = projectModel.getQuery('customQuery');
 </pre>
 </div></div>
