--- a/docs/partials/api/Model.html
+++ b/docs/partials/api/Model.html
@@ -38,23 +38,68 @@ application.  Identifies field types and formats accordingly.  Also denotes if a
 <div class="example"><div class="model-page"><pre class="prettyprint linenums">
 //Taken from a fictitious projectsModel.js
 var model = new modelFactory.Model({
-        factory: Project,
-        list: {
-            guid: '{PROJECT LIST GUID}',
-            title: 'Projects',
-            customFields: [
-                { internalName: 'Title', objectType: 'Text', mappedName: 'title', readOnly: false },
-                { internalName: 'Customer', objectType: 'Lookup', mappedName: 'customer', readOnly: false },
-                { internalName: 'ProjectDescription', objectType: 'Text', mappedName: 'projectDescription', readOnly: false },
-                { internalName: 'Status', objectType: 'Text', mappedName: 'status', readOnly: false },
-                { internalName: 'TaskManager', objectType: 'User', mappedName: 'taskManager', readOnly: false },
-                { internalName: 'ProjectGroup', objectType: 'Lookup', mappedName: 'group', readOnly: false },
-                { internalName: 'CostEstimate', objectType: 'Currency', mappedName: 'costEstimate', readOnly: false },
-                { internalName: 'Active', objectType: 'Boolean', mappedName: 'active', readOnly: false },
-                { internalName: 'Attachments', objectType: 'Attachments', mappedName: 'attachments', readOnly: true}
-            ]
-        }
-    });
+    factory: Project,
+    list: {
+        guid: '{PROJECT LIST GUID}',
+        title: 'Projects',
+        customFields: [
+            {
+               internalName: 'Title',
+               objectType: 'Text',
+               mappedName: 'title',
+               readOnly: false
+            },
+            {
+               internalName: 'Customer',
+               objectType: 'Lookup',
+               mappedName: 'customer',
+               readOnly: false
+            },
+            {
+               internalName: 'ProjectDescription',
+               objectType: 'Text',
+               mappedName: 'projectDescription',
+               readOnly: false
+            },
+            {
+               internalName: 'Status',
+               objectType: 'Text',
+               mappedName: 'status',
+               readOnly: false
+            },
+            {
+               internalName: 'TaskManager',
+               objectType: 'User',
+               mappedName: 'taskManager',
+               readOnly: false
+            },
+            {
+               internalName: 'ProjectGroup',
+               objectType: 'Lookup',
+               mappedName: 'group',
+               readOnly: false
+            },
+            {
+               internalName: 'CostEstimate',
+               objectType: 'Currency',
+               mappedName: 'costEstimate',
+               readOnly: false
+            },
+            {
+               internalName: 'Active',
+               objectType: 'Boolean',
+               mappedName: 'active',
+               readOnly: false
+            },
+            {
+               internalName: 'Attachments',
+               objectType: 'Attachments',
+               mappedName: 'attachments',
+               readOnly: true
+            }
+        ]
+    }
+});
 </pre>
 </div></div>
 </div>
