--- a/docs/partials/api/Model.registerQuery.html
+++ b/docs/partials/api/Model.registerQuery.html
@@ -4,19 +4,91 @@
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="model-registerquery-page"><p>Constructor that allows us create a static query with a reference to the parent model</p>
+<div class="description"><div class="model-registerquery-page"><p>Constructor that allows us create a static query with the option to build dynamic queries as seen in the
+third example.  This construct is a passthrough to <a href="http://spservices.codeplex.com/">SPServices</a></p>
 </div></div>
 <h2 id="usage">Usage</h2>
 <div class="usage"><pre class="prettyprint linenums">registerQuery([queryOptions]);</pre>
-<h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>[queryOptions]</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-registerquery-page"><p>Optional options to pass through to the dataService.</p>
+<h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>[queryOptions]</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-registerquery-page"><p>Optional options to pass through to the
+<a href="#/api/dataService.executeQuery">dataService</a>.</p>
 </div></td></tr><tr><td>queryOptions.name</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-registerquery-page"><p>Optional name of the new query (recommended but will
 default to &#39;Primary&#39; if not specified)</p>
-</div> <p><em>(default: defaultQueryName)</em></p></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-registerquery-page"><p>Query Returns a new query object.</p>
+</div> <p><em>(default: defaultQueryName)</em></p></td></tr><tr><td>queryOptions.operation</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-registerquery-page"><p>Defaults to
+<a href="http://msdn.microsoft.com/en-us/library/lists.lists.getlistitemchangessincetoken%28v=office.12%29.aspx">GetListItemChangesSinceToken</a>
+but for a smaller payload and faster response you can use
+<a href="http://spservices.codeplex.com/wikipage?title=GetListItems&amp;referringTitle=Lists">GetListItems</a>.</p>
+</div> <p><em>(default: "GetListItemChangesSinceToken")</em></p></td></tr><tr><td>queryOptions.cacheXML</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="model-registerquery-page"><p>Typically don&#39;t need to store the XML response because it
+has already been parsed into JS objects.</p>
+</div> <p><em>(default: false)</em></p></td></tr><tr><td>[queryOptions.query]</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-registerquery-page"><p>CAML Query - Josh McCarty has a good quick reference
+<a href="http://joshmccarty.com/2012/06/a-caml-query-quick-reference">here</a></p>
+</div></td></tr><tr><td>[queryOptions.queryOptions]</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-registerquery-page"><pre class="prettyprint linenums">
+// Default options
+'&lt;QueryOptions&gt;' +
+'   &lt;IncludeMandatoryColumns&gt;' +
+     'FALSE' +
+    '&lt;/IncludeMandatoryColumns&gt;' +
+'   &lt;IncludeAttachmentUrls&gt;' +
+     'TRUE' +
+    '&lt;/IncludeAttachmentUrls&gt;' +
+'   &lt;IncludeAttachmentVersion&gt;' +
+     'FALSE' +
+    '&lt;/IncludeAttachmentVersion&gt;' +
+'   &lt;ExpandUserField&gt;' +
+     'FALSE' +
+    '&lt;/ExpandUserField&gt;' +
+'&lt;/QueryOptions&gt;',
+</pre>
+</div></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-registerquery-page"><p>Query Returns a new query object.</p>
 </div></td></tr></table></div>
 <h2 id="example">Example</h2>
-<div class="example"><div class="model-registerquery-page"><pre class="prettyprint linenums">
-//Advanced functionality that would allow us to dynamically create queries for list items with a
-//lookup field associated with a specific project id.  Let's assume this is on the projectTasksModel.
+<div class="example"><div class="model-registerquery-page"><p><h6 id="example_example-#1">Example #1</h6>
+<pre class="prettyprint linenums">
+// Query to retrieve the most recent 25 modifications
+model.registerQuery({
+   name: 'recentChanges',
+   CAMLRowLimit: 25,
+   query: '' +
+       '&lt;Query&gt;' +
+       '   &lt;OrderBy&gt;' +
+       '       &lt;FieldRef Name="Modified" Ascending="FALSE"/&gt;' +
+       '   &lt;/OrderBy&gt;' +
+           //Prevents any records from being returned if user doesn't
+           // have permissions on project
+       '   &lt;Where&gt;' +
+       '       &lt;IsNotNull&gt;' +
+       '           &lt;FieldRef Name="Project"/&gt;' +
+       '       &lt;/IsNotNull&gt;' +
+       '   &lt;/Where&gt;' +
+       '&lt;/Query&gt;'
+});
+</pre>
+<p><h6 id="example_example-#2">Example #2</h6>
+<pre class="prettyprint linenums">
+// Could be placed on the projectModel and creates the query but doesn't
+// call it
+projectModel.registerQuery({
+    name: 'primary',
+    query: '' +
+        '&lt;Query&gt;' +
+        '   &lt;OrderBy&gt;' +
+        '       &lt;FieldRef Name="Title" Ascending="TRUE"/&gt;' +
+        '   &lt;/OrderBy&gt;' +
+        '&lt;/Query&gt;'
+});
+
+//To call the query or check for changes since the last call
+projectModel.executeQuery('primary').then(function(entities) {
+    // We now have a reference to array of entities stored in the local
+    // cache.  These inherit from the ListItem prototype as well as the
+    // Project prototype on the model
+    $scope.projects = entities;
+});
+</pre>
+<p><h6 id="example_example-#3">Example #3</h6>
+<pre class="prettyprint linenums">
+// Advanced functionality that would allow us to dynamically create
+// queries for list items with a lookup field associated with a specific
+// project id.  Let's assume this is on the projectTasksModel.
 model.queryByProjectId(projectId) {
     // Unique query name
     var queryKey = 'pid' + projectId;
@@ -32,11 +104,13 @@ model.queryByProjectId(projectId) {
                 '   &lt;/OrderBy&gt;' +
                 '   &lt;Where&gt;' +
                 '       &lt;And&gt;' +
-            // Prevents any records from being returned if user doesn't have permissions on project
+                             // Prevents any records from being returned
+                             //if user doesn't have permissions on project
                 '           &lt;IsNotNull&gt;' +
                 '               &lt;FieldRef Name="Project"/&gt;' +
                 '           &lt;/IsNotNull&gt;' +
-            // Return all records for the project matching param projectId
+                             // Return all records for the project matching
+                             // param projectId
                 '           &lt;Eq&gt;' +
                 '               &lt;FieldRef Name="Project" LookupId="TRUE"/&gt;' +
                 '               &lt;Value Type="Lookup"&gt;' + projectId + '&lt;/Value&gt;' +
