--- a/partials/api/List.html
+++ b/partials/api/List.html
@@ -21,7 +21,8 @@ in our application.  Also contains field type, readonly attribute, and any other
       internalName: "Title",
       objectType: "Text",
       mappedName: "lastName",
-      readOnly:false },
+      readOnly:false
+  },
   {
       internalName: "FirstName",
       objectType: "Text",
